--- a/src/App.css
+++ b/src/App.css
@@ -424,9 +424,9 @@ h2 {
 }
 
 .xp-content h6 {
-  margin: 0;
-  font-size: 18px;
-  margin-bottom: 10px;
+  /* margin: 0; */
+  font-size: 14px;
+  margin: 10px 0;
   /* color: white; */
 }
 
@@ -649,7 +649,7 @@ footer > p > a {
     font-size: 12px;
   }
 
-  h6 {
+  .xp-content h6 {
     font-size: 12px;
   }
 
@@ -720,8 +720,8 @@ footer > p > a {
     font-size: 10px;
   }
 
-  h6 {
-    font-size: 10px;
+  .xp-content h6 {
+    font-size: 12px;
   }
 
   .xp-details > ul > li {
