--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,35 @@ h1 {
 
 .name h3 {
   font-size: 36px;
+  color: rgb(140, 140, 140);
+  /* color: rgb(172, 172, 172); */
+}
+
+@keyframes highlight-animation {
+  0% {
+    color: rgb(140, 140, 140);
+    text-shadow: 0 0 50px rgba(255, 255, 255, 0);
+
+    /* font-size: 36px; */
+  }
+  50% {
+    color: white;
+    text-shadow: 0 0 50px rgba(255, 255, 255, 0.5);
+
+    /* font-size: 42px; */
+  }
+  100% {
+    color: rgb(140, 140, 140);
+    text-shadow: 0 0 50px rgba(255, 255, 255, 0);
+
+    /* font-size: 36px; */
+  }
+}
+
+.highlight {
+  animation-name: highlight-animation;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
 
 .aboutme {
@@ -599,6 +628,10 @@ footer > p > a {
     font-size: 24px;
   }
 
+  .highlight {
+    display: block;
+  }
+
   .badge {
     font-size: 8px;
     padding: 5px 10px;
@@ -621,6 +654,10 @@ footer > p > a {
 
   .name h3 {
     font-size: 20px;
+  }
+
+  .highlight {
+    display: block;
   }
 
   .aboutme p {
@@ -669,7 +706,11 @@ footer > p > a {
   }
 
   .name h3 {
-    font-size: 16px;
+    font-size: 18px;
+  }
+
+  .highlight {
+    display: block;
   }
 
   body > div > h2 {
