--- a/src/App.css
+++ b/src/App.css
@@ -60,14 +60,14 @@ h1 {
 
 .name h3 {
   font-size: 36px;
-  color: rgb(140, 140, 140);
-  /* color: rgb(172, 172, 172); */
+  /* color: rgb(140, 140, 140); */
+  color: rgb(172, 172, 172);
 }
 
 @keyframes highlight-animation {
   0% {
-    color: rgb(140, 140, 140);
-    text-shadow: 0 0 50px rgba(255, 255, 255, 0);
+    /* color: rgb(140, 140, 140); */
+    /* text-shadow: 0 0 50px rgba(255, 255, 255, 0); */
 
     /* font-size: 36px; */
   }
@@ -78,8 +78,8 @@ h1 {
     /* font-size: 42px; */
   }
   100% {
-    color: rgb(140, 140, 140);
-    text-shadow: 0 0 50px rgba(255, 255, 255, 0);
+    /* color: rgb(140, 140, 140); */
+    /* text-shadow: 0 0 50px rgba(255, 255, 255, 0); */
 
     /* font-size: 36px; */
   }
@@ -99,6 +99,8 @@ h1 {
 .aboutme p {
   width: 50%;
   margin: auto;
+  color: rgb(172, 172, 172);
+
   /* margin-bottom: 100px; */
 }
 
