--- a/src/App.css
+++ b/src/App.css
@@ -573,6 +573,46 @@ h2 {
 }
 
 /* *** */
+.links-mobile {
+  background-color: rgb(20, 20, 20);
+  border-top: thin solid white;
+  padding-bottom: 50px;
+}
+
+.links-mobile h2 {
+  /* font-size: 20px; */
+  /* padding: 10px 0; */
+}
+
+.links-mobile-container {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.links-mobile-container > div {
+  width: 150px;
+  text-align: center;
+}
+
+.links-mobile-container > div > a > img {
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+}
+
+.links-mobile-container > div > a {
+  width: 100px;
+  text-align: center;
+}
+
+.links-mobile-container > div > h5 {
+  margin: 0;
+}
+
+/* *** */
 footer {
   background-color: rgb(20, 20, 20);
   border-top: thin solid white;
